# aquareum

./: .gitattributes  .gitignore  .gitlab-ci.yml  .lintstagedrc.yaml  .prettierignore  .yarnrc.yml  LICENSE  Makefile  README.md  config.json  go.mod  go.sum  lerna.json  meson.build  my-release-key.keystore  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.ci/: dockerfile-hash.yaml
.gitlab/: changelog_config.yml
.husky/: post-commit  pre-commit
cmd/aquareum/: aquareum.c  aquareum.go
cmd/libaquareum/: aquareum.go  build-flags.go
docker/: build.Dockerfile  ci.Dockerfile  release.Dockerfile
hack/: latest-worker.js  push.mjs
hsm/: hsm.go
js/app/: .env.development  .env.production  .gitignore  README.md  app.config.ts  app.json  exportClientExpoConfig.js  exportOptions.plist  globals.d.ts  google-services.json  metro.config.js  package.json  tamagui.config.ts  tsconfig.base.json
js/app/android/: gradle.properties  settings.gradle
js/app/android/app/: build.gradle  google-services.json
js/app/android/app/src/main/: AndroidManifest.xml
js/app/android/app/src/main/res/values/: strings.xml
js/app/app/: CurrentToast.tsx  Provider.tsx  _layout.tsx  about.tsx  background.tsx  options.tsx  settings.tsx  support.tsx  updates.tsx
js/app/app/(tabs)/: _layout.tsx  admin.tsx  cube.b64.tsx  index.tsx
js/app/app/multi/: [players].tsx
js/app/app/platform/: platform.android.tsx  platform.ios.tsx  platform.mobile.tsx  platform.tsx  platform.web.tsx
js/app/app/stream/: [stream].tsx
js/app/components/: admin.native.tsx  admin.tsx  countdown.tsx  get-apps.native.tsx  get-apps.tsx  index.tsx  providers.native.tsx  providers.tsx  updates.tsx
js/app/components/error/: error.tsx
js/app/components/loading/: loading.tsx
js/app/components/player/: controls.tsx  fullscreen.native.tsx  fullscreen.tsx  player-loading.tsx  player.native.tsx  player.tsx  props.tsx  shared.tsx  video.native.tsx  video.tsx  webrtc.tsx
js/app/components/provider/: provider.native.tsx  provider.shared.tsx  provider.tsx
js/app/components/settings/: settings.tsx  updates.native.tsx  updates.tsx
js/app/components/stream-list/: stream-list.tsx
js/app/constants/: env.ts
js/app/hooks/: useAquareumNode.tsx  useColorScheme.ts  usePlatform.native.tsx  usePlatform.shared.tsx  usePlatform.tsx  uuid.tsx
js/app/ios/: Podfile
js/app/ios/Aquareum/: Info.plist
js/app/ios/Aquareum.xcodeproj/: project.pbxproj
js/app/ios/Aquareum/Supporting/: Expo.plist
js/desktop/: .gitignore  README.md  entitlements.plist  forge.config.ts  package.json  tsconfig.json
js/desktop/assets/images/: aquareum-logo.icns
js/desktop/src/: env.ts  index.ts  node.ts  preload.ts  renderer.ts  updater.ts
pkg/api/: api.go  api_internal.go  api_test.go  app-downloads.go  app-downloads_test.go  app-update.go  app-updates.go  desktop-updates.go  mime.types  mimes.go  playback.go
pkg/aqhttp/: aqhttp.go
pkg/aqio/: LICENSE  aqio.go
pkg/aqtime/: aqtime.go  aqtime_test.go
pkg/cmd/: aquareum.go  aquareum_linux.go  aquareum_notlinux.go  stream.go  timeoutgroup.go
pkg/config/: config.go
pkg/config/configtesting/: configtesting.go
pkg/config/git/: git.go
pkg/config/uuid/: uuid.go
pkg/crypto/aqpub/: aqpub.go
pkg/crypto/signers/: signers.go
pkg/crypto/signers/eip712/: eip712.go  eip712_test.go  testwallet.json
pkg/crypto/signers/eip712/eip712test/: eip712test.go
pkg/crypto/signers/eip712/export-schema/: export-schema.go
pkg/errors/: errors.go
pkg/log/: log.go
pkg/media/: gstreamer.go  gstreamer_test.go  media.go  media_signer.go  media_test.go  plugins.c  plugins.h
pkg/media/gofilesink/: meson.build  zzgenerated_plugin.go
pkg/media/main/: gstreamer.go
pkg/media/mediatesting/: mediatesting.go
pkg/mist/mistclient/: mistclient.go
pkg/mist/mistconfig/: mistconfig.go
pkg/mist/misttriggers/: live_track_list.go  live_track_list_test.go  push_end.go  push_end_test.go  push_out_start.go  push_out_start_test.go  push_rewrite.go  push_rewrite_test.go  stream_buffer.go  stream_buffer_test.go  stream_source.go  stream_source_test.go  triggers.go  user_end_test.go  user_new.go  user_new_test.go
pkg/model/: model.go  notification.go  player_event.go  segment.go  thumbnail.go
pkg/notifications/: firebase.go  firebase_test.go
pkg/proc/: proc.go  proc_test.go
pkg/replication/: replicator.go
pkg/replication/boring/: boring.go
pkg/schema/: schema.go
pkg/schema/v0/: golive.go
src/react-native/: app.json  index.tsx  package.json  pnpm-lock.yaml
src/react-native/.expo/prebuild/: cached-packages.json
src/react-native/ios/reactnative/: Info.plist
src/react-native/ios/reactnative.xcodeproj/: project.pbxproj
subprojects/: .gitignore  c2pa_go.wrap  ffmpeg.wrap  gstreamer-full.wrap  mistserver.wrap
test/: fixtures.go
test/fixtures/: sample-stream-audio.mkv  sample-stream.mkv  video.mpegts
util/: branch.sh  darwin-amd64-apple.ini  kaniko-ci.sh  linux-amd64-gnu.ini  linux-arm64-gnu.ini  mac-build.sh  mac-codesign.sh  mac-tart-build.sh  release-files.sh  tools.go  version.sh  windows-amd64-gnu.ini  windows-selftest.sh
